added time blocks to html

--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
       href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -35,6 +35,80 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!-- create a time block for each individual hour -->
+      <div id="time9" class="row time-block"> <!-- class names from css and bootstrap -->
+        <div class="col-md-1 hour">
+            09:00
+        </div>
+        <!-- create a text area for the user to enter text -->
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button><!-- creates a save button with font-awesome save icon -->
+      </div>
+      <div id="time10" class="row time-block">
+        <div class="col-md-1 hour">
+            10:00
+        </div>
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="time11" class="row time-block">
+        <div class="col-md-1 hour">
+            11:00
+        </div>
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="time12" class="row time-block">
+        <div class="col-md-1 hour">
+            12:00
+        </div>
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="time13" class="row time-block">
+        <div class="col-md-1 hour">
+            13:00
+        </div>
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="time14" class="row time-block">
+        <div class="col-md-1 hour">
+            14:00
+        </div>
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="time15" class="row time-block">
+        <div class="col-md-1 hour">
+            15:00
+        </div>
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="time16" class="row time-block">
+        <div class="col-md-1 hour">
+            16:00
+        </div>
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
+      <div id="time17" class="row time-block">
+        <div class="col-md-1 hour">
+            17:00
+        </div>
+        <textarea class="col-md-10 description">            
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
