--- a/Index.html
+++ b/Index.html
@@ -35,15 +35,15 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <!-- create a time block for each individual hour -->
-      <div id="time9" class="row time-block"> <!-- class names from css and bootstrap -->
+      <!-- created a time block for each individual hour -->
+      <div id="time9" class="row time-block"> <!-- class names from css and bootstrap, ID to be able to select each time block -->
         <div class="col-md-1 hour">
             09:00
         </div>
-        <!-- create a text area for the user to enter text -->
+        <!-- created a text area for the user to enter text -->
         <textarea class="col-md-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button><!-- creates a save button with font-awesome save icon -->
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button><!-- created a save button with font-awesome save icon -->
       </div>
       <div id="time10" class="row time-block">
         <div class="col-md-1 hour">
@@ -113,8 +113,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> added these two jquery links -->
-    <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script><!-- added link to js file -->
   </body>
 </html>
