--- a/Index.html
+++ b/Index.html
@@ -37,77 +37,77 @@
       <!-- Timeblocks go here -->
       <!-- created a time block for each individual hour -->
       <div id="time9" class="row time-block"> <!-- class names from css and bootstrap, ID to be able to select each time block -->
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour"> <!-- set the width of each section using the bootstrap sizing guides -->
             09:00
         </div>
         <!-- created a text area for the user to enter text -->
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button><!-- created a save button with font-awesome save icon -->
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button><!-- created a save button with font-awesome save icon -->
       </div>
       <div id="time10" class="row time-block">
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour">
             10:00
         </div>
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="time11" class="row time-block">
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour">
             11:00
         </div>
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="time12" class="row time-block">
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour">
             12:00
         </div>
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="time13" class="row time-block">
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour">
             13:00
         </div>
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="time14" class="row time-block">
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour">
             14:00
         </div>
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="time15" class="row time-block">
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour">
             15:00
         </div>
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="time16" class="row time-block">
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour">
             16:00
         </div>
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button>
       </div>
       <div id="time17" class="row time-block">
-        <div class="col-md-1 hour">
+        <div class="col-sm-1 hour">
             17:00
         </div>
-        <textarea class="col-md-10 description">            
+        <textarea class="col-sm-10 description">            
         </textarea>
-        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        <button class="btn saveBtn col-sm-1"><i class="fas fa-save"></i></button>
       </div>
     </div>
 
